set up basic header

--- a/partials/header.html
+++ b/partials/header.html
@@ -1,3 +1,14 @@
-<div>
-    <img src="/images/markus-spiske-large.jpg" alt="An image of code taken by Markus Spiske">
+<div class="banner">
+  <span class="dropdown">
+    <button class="dropBtn">Menu</button>
+    <div class="dropdown-content">
+      <a href="../index.html">Home</a>
+      <a href="#">Project1</a>
+      <a href="#">Project2</a>
+    </div>
+  </span>
+  <span class="title"><h1>Bug Finder</h1></span>
+  <span class="signIn">
+    <button class="signInBtn"><a href="../signIn.html">Sign In</a></button>
+  </span>
 </div>
