--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@ body{
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
+    margin-bottom: 0vw;
+}
+
+.title{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-decoration: underline;
 }
 
 /* Dropdown Button */
@@ -89,10 +95,54 @@ body{
     margin-right: auto;
     background: white;
     padding: 5vw;
+    border-radius: 20px;
+    border-style: double;
+    border-color: black;
+    border-width: .75vw;
 }
 
 .loginForm{
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.divider{
+    background-color: white;
+    margin-left: 10vw;
+    margin-right: 10vw;
+    margin-top: 0vw;
+    padding: 5vw;
+}
+
+h2{
+    text-align: center;
+}
+
+.desc p{
+    font-size: 2vw;
+    text-align: center;
+}
+
+.projectCard{
+    background: lightgrey;
+    padding-left: 2vw;
+    padding-right: 2vw;
+    border-radius: 20px;
+    border-style: ridge;
+    border-color: gray;
+    border-width: .75vw;
+}
+
+.projectCard h3{
+    margin-top: 1vw;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+}
+.projectCard p{
+    font-size: 1.5vw;
+    text-align: left;
+    margin-top: 0px;
+    padding-top: 0px;
+    margin-bottom: 1vw;
 }
