home page loads project list

--- a/partials/header.html
+++ b/partials/header.html
@@ -3,12 +3,10 @@
     <button class="dropBtn">Menu</button>
     <div class="dropdown-content">
       <a href="../index.html">Home</a>
-      <a href="#">Project1</a>
-      <a href="#">Project2</a>
+      <a href="../profile.html">My Tickets</a>
+      <a href="../addProject.html">Create Project</a>
+      <a href="../signIn.html">Sign In</a>
     </div>
   </span>
   <span class="title"><h1>Bug Finder</h1></span>
-  <span class="signIn">
-    <button class="signInBtn"><a href="../signIn.html">Sign In</a></button>
-  </span>
 </div>
