--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body{
 /* The title */
 .title{
     color: white;
-    font-size: xx-large;
+    font-size: 4vw;
     text-align: center;
 }
 
@@ -110,10 +110,14 @@ h2{
 }
 
 /* project cards */
+.projectList{
+    margin-left: 0vw;
+    padding-left: 0vw;
+}
 .projectCard{
     background: lightgrey;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 2vw;
+    padding-right: 2vw;
     border-radius: 2vw;
     border-style: ridge;
     border-color: gray;
@@ -152,10 +156,18 @@ h2{
     padding-top: 0px;
     margin-bottom: 0px;
 }
-.resolveBtn{
-    margin-bottom: 1vw;
+.deleteBtn{
+    margin-bottom: 10px;
     width: 100px;
-    height: 30px;
+    height: 25px;
+    
+}
+
+.editBtn{
+    margin-bottom: 10px;
+    width: 100px;
+    height: 25px;
+    
 }
 
 .ticketHeader{
@@ -171,6 +183,13 @@ h2{
     margin-right: 10vw;
     padding-bottom: 10px;
     margin-top: 10px;
+}
+
+.projectInfo{
+    text-align: center;
+    border-radius: 60px;
+    border-style: solid;
+    border-color: black;
 }
 
 /* half screen */
