Can now edit tickets

--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ h2{
     border-style: ridge;
     border-color: gray;
     border-width: 7.5px;
-    text-align: right;
+    text-align: center;
 }
 .bugCard h3{
     margin-top: 10px;
@@ -158,16 +158,18 @@ h2{
 }
 .deleteBtn{
     margin-bottom: 10px;
-    width: 100px;
+    width: 75px;
     height: 25px;
-    
 }
-
 .editBtn{
     margin-bottom: 10px;
-    width: 100px;
-    height: 25px;
-    
+    width: 75px;
+    height: 25px; 
+}
+.bugCard button{
+    margin-bottom: 10px;
+    width: 75px;
+    height: 25px;   
 }
 
 .ticketHeader{
@@ -192,7 +194,7 @@ h2{
     border-color: black;
 }
 
-/* half screen */
+/* small screen */
 p{
-    font-size: 1.5vw;
+    font-size: 3vw;
 }
