created profile page

--- a/partials/header.html
+++ b/partials/header.html
@@ -3,7 +3,7 @@
     <button class="dropBtn">Menu</button>
     <div class="dropdown-content">
       <a href="../index.html">Home</a>
-      <a href="../profile.html">My Tickets</a>
+      <a href="../profile.html">Profile</a>
       <a href="../addProject.html">Create Project</a>
       <a href="../signIn.html">Sign In</a>
     </div>
