--- a/style.css
+++ b/style.css
@@ -194,6 +194,11 @@ h2{
     border-color: black;
 }
 
+/* fixes downscaling issue with corresponding textarea */
+#createDescription{
+    max-width: 95%;
+}
+
 /* small screen */
 p{
     font-size: 3vw;
