--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body{
     background-attachment: fixed;
     background-size: 100% 100%;
     margin-bottom: 0vw;
+    
+    /* to keep banner's aspect ratio from getting distorted when resizing window */
+    background-position: center center;
+    background-size: cover;
 }
 
 .title{
