--- a/partials/header.html
+++ b/partials/header.html
@@ -1,12 +1,9 @@
 <div class="banner">
-  <span class="dropdown">
-    <button class="dropBtn">Menu</button>
-    <div class="dropdown-content">
-      <a href="../index.html">Home</a>
-      <a href="../profile.html">My Tickets</a>
-      <a href="../addProject.html">Create Project</a>
-      <a href="../signIn.html">Sign In</a>
-    </div>
-  </span>
-  <span class="title"><h1>Bug Finder</h1></span>
+  <div class ="title">Bug Finder</div>
+</div>
+
+<div id="flexbox-header">
+  <a href="../index.html"><button type="button" class="cool" style="background-color:#61ca99;">Home</button></a>
+  <a href="../signIn.html"><button type="button" class="cool" style="background-color: #61ca99;">Sign in</button></a>
+  <a href="../profile.html"><button type="button" class="cool" style="background-color:#61ca99;">Profile</button></a>
 </div>
