--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: gray;
+    background-color: rgb(238, 238, 238);
     margin: 0%;
 }
 
@@ -7,8 +7,8 @@ body{
     font-size: 30px;
 }
 
-/* add new project button style */
-#addProject{
+/* button style */
+.cool {
     display:inline-block;
     padding:0.46em 1.6em;
     border:0.1em solid #000000;
@@ -25,7 +25,7 @@ body{
     text-align:center;
     transition: all 0.15s;
     }
-#addProject:hover{
+.cool:hover{
     text-shadow: 0 0 2em rgba(255,255,255,1);
     color:#FFFFFF;
     border-color:#FFFFFF;
@@ -40,23 +40,40 @@ body{
 
 /* The heading banner */
 .banner {
-    display: grid;
+    display: flex;
     grid-template-columns: 25% 50% 25%;
-    height: 15vw;
-    background-image: url('/images/markus-spiske-medium.jpg');
+    height: 8vw;
+    width: 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
     margin-bottom: 0vw;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    
+    /*background-image: url('/images/markus-spiske-medium.jpg');*/
     
     /* to keep banner's aspect ratio from getting distorted when resizing window */
     background-position: center center;
     background-size: cover;
 }
 
+.banner::before {
+    content: "";
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    background-image: url('/images/markus-spiske-medium.jpg');
+    opacity: 0.3;
+    /*background-color: rgba(110, 110, 110, 0.75);*/
+}
+
 .title{
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    text-decoration: underline;
+    font-family: Helvetica, Georgia, 'Times New Roman', Times, serif;
+    /*text-decoration: underline;*/
 }
 
 /* Dropdown Button */
@@ -107,14 +124,14 @@ body{
 
 /* The title */
 .title{
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 4vw;
     text-align: center;
 }
 
 /* login container */
 .container{
-    margin-top: 20vw;
+    /*margin-top: 20vw;*/
     max-width: 30%;
     margin-left: auto;
     margin-right: auto;
@@ -133,11 +150,55 @@ body{
 }
 
 .divider{
-    background-color: white;
-    margin-left: 10vw;
+    background-color: rgb(238, 238, 238);
+    /*margin-left: 10vw;
     margin-right: 10vw;
     margin-top: 0vw;
-    padding: 5vw;
+    padding: 5vw;*/
+}
+
+#flexbox-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 3vw;
+    column-gap: 40px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+}
+
+#flexbox {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 30px;
+    row-gap: 30px;
+    margin-left: 30px;
+    margin-right: 60px;
+    flex-direction: row;
+}
+#flexbox > div {
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.225), 0 6px 20px 0 rgba(0, 0, 0, 0.225);
+    padding: 20px;
+}
+#flex-col-left {
+    /*flex: 20%;*/
+    width: 400px;
+    max-width: 100%, fit-content;
+    align-self: flex-start;
+}
+#flex-col-right {
+    /*flex: 40%;*/
+    width: 1000px;
+    max-width: 100%;
+    align-self: flex-start;
+}
+@media (max-width: 1100px) {
+    #flexbox {
+        flex-direction: column;
+    }
 }
 
 h2{
