few more visual things

--- a/partials/header.html
+++ b/partials/header.html
@@ -3,7 +3,7 @@
 </div>
 
 <div id="flexbox-header">
-  <a href="../index.html"><button type="button" class="cool" style="background-color:#61ca99;">Home</button></a>
-  <a href="../signIn.html"><button type="button" class="cool" style="background-color: #61ca99;">Sign in</button></a>
-  <a href="../profile.html"><button type="button" class="cool" style="background-color:#61ca99;">Profile</button></a>
+  <a href="../index.html"><button type="button" class="cool" style="background-color:#dbdbdb;">Home</button></a>
+  <a href="../signIn.html"><button type="button" class="cool" style="background-color: #dbdbdb;">Sign in</button></a>
+  <a href="../profile.html"><button type="button" class="cool" style="background-color:#dbdbdb;">Profile</button></a>
 </div>
