--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ body{
     font-family: 'Roboto',sans-serif;
     font-weight: 300;
     color: black;
-    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
     background-color:#FFFFFF;
     text-align:center;
     transition: all 0.15s;
@@ -183,7 +182,7 @@ body{
     border-radius: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.225), 0 6px 20px 0 rgba(0, 0, 0, 0.225);
     padding: 20px;
-    width: 1000px;
+    width: 800px;
     max-width: 100%;
 }
 
@@ -256,7 +255,7 @@ h2{
     background: lightgrey;
     padding-left: 20px;
     padding-right: 20px;
-    border-radius: 2vw;
+    border-radius: 20px;
     border-style: ridge;
     border-color: gray;
     border-width: 7.5px;
@@ -272,7 +271,7 @@ h2{
     text-align: left;
     margin-top: 0px;
     padding-top: 0px;
-    margin-bottom: 0px;
+    margin-bottom: 1vw;
 }
 .deleteBtn{
     margin-bottom: 10px;
